k8s/dkd/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dkd
spec:
  type: ClusterIP
  selector:
    app: dkd
  ports:
    - name: http
      protocol: TCP
      port: 8100
      targetPort: 8100
